# edgelogbase

./: CMakeLists.txt  Makefile  README  arraysort.cpp  arraysort.h  benchmark.cpp  benchmark2.cpp  create.cpp  exp-query.cpp  tgraph.cpp  tgraph.h  tgraphreader.h  use.cpp  vertices.cpp
